2022-04-03 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCicode.c,
	  src/SDCCsymt.c,
	  src/mcs51/gen.c,
	  src/mcs51/main.c,
	  support/regression/tests/structreturn.c.in:
	  struct/union return for mcs51.

2022-04-02 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/mcs51/gen.c,
	  support/regression/tests/gcc-torture-execute-strct-varg-1.c,
	  support/regression/tests/gcc-torture-execute-va-arg-23.c,
	  support/regression/tests/gcc-torture-execute-va-arg-4.c,
	  support/regression/tests/structparam.c,
	  support/regression/tests/structparam.c.in:
	  struct / union parameters on the stack for mcs51.

2022-04-01 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* ChangeLog,
	  src/SDCCicode.c,
	  src/SDCCmem.c,
	  support/regression/ports/mcs51-common/spec.mk,
	  support/regression/tests/gcc-torture-execute-20040707-1.c,
	  support/regression/tests/gcc-torture-execute-20050713-1.c,
	  support/regression/tests/gcc-torture-execute-20180131-1.c,
	  support/regression/tests/gcc-torture-execute-pr67226.c,
	  support/regression/tests/structparam.c:
	  Fix bug #3377.

2022-03-31 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCicode.c,
	  src/SDCCsymt.c,
	  src/ds390/main.c,
	  src/hc08/main.c,
	  src/mcs51/main.c,
	  src/mos6502/main.c,
	  support/regression/tests/bug-3368.c,
	  support/regression/tests/gcc-torture-execute-20050713-1.c,
	  support/regression/tests/gcc-torture-execute-20180131-1.c,
	  support/regression/tests/gcc-torture-execute-pr67226.c,
	  support/regression/tests/gcc-torture-execute-strct-varg-1.c,
	  support/regression/tests/gcc-torture-execute-va-arg-4.c,
	  support/regression/tests/structparam.c,
	  support/regression/tests/gcc-torture-execute-20021118-1.c,
	  support/regression/tests/gcc-torture-execute-20040707-1.c,
	  support/regression/tests/gcc-torture-execute-20180131-1.c,
	  support/regression/tests/gcc-torture-execute-pr67226.c,